[Stack] Prevent Item from overflowing horizontally

--- a/src/components/Stack/Stack.scss
+++ b/src/components/Stack/Stack.scss
@@ -104,7 +104,7 @@
 }
 
 .Item {
-  flex: 0 0 auto;
+  flex: 0 1 auto;
   min-width: 0;
 }
 
